# rbc

./: .gitignore  README.md  static_obstacle.xml
cpp/: CMakeLists.txt  poisson.cpp  poisson.h  rollout.cpp
cpp/logs/: hsafe_log.csv  ocg_log.csv  rollout_log.csv
matlab/: data_plotter.m
python/: certificates.py  cost.py  main.py  planner_task.py  plotting.py  safety_function.py
